# python-project-blueprint

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: bootstrap.yml  cd.yml  ci.yml  pr-checks.yml  security.yml
docker/: Dockerfile  docker-compose.yml
docs/: CHECKLIST.md  INSTRUCTIONS.md
src/package_name/: main.py
